--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.14.0",
+    "express-session": "^1.15.6",
     "mongodb": "^2.2.10"
   }
 }
