--- a/cliente_web_instagram_clone/package.json
+++ b/cliente_web_instagram_clone/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "consign": "^0.1.2",
+    "crypto": "^1.0.1",
     "ejs": "^2.5.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
